apps/homepage/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "192.168.31.0"
  listeners:
  - name: http-gateway
    hostname: "*.njyzy.space"
    port: 80
    protocol: HTTP
    # tls:
    #   mode: Terminate
    #   certificateRefs:
    #     - name: homepage-cert   # TLS secret from cert-manager or manually created
  # - name: https-gateway
  #   hostname: "*.njyzy.space"
  #   port: 443
  #   protocol: HTTPs
  #   # tls:
  #   #   mode: Terminate
  #   #   certificateRefs:
  #   #     - name: homepage-cert   # TLS secret from cert-manager or manually created
